syntax = "proto3";
option java_multiple_files = true;
package dev.sultanov.grpc.exception.common;

message GreetingRequest {
    string name = 1;
}

message GreetingResponse {
    string greeting = 1;
}

service GreetingService {
    rpc greeting (GreetingRequest) returns (GreetingResponse);
}
